fix: root overflowing

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -90,6 +90,8 @@ span {
   color: var(--text-color);
   margin: 0;
 
+  overflow: hidden;
+
   display: flex;
 
   width: 100vw;
